Update gradle build file and readme
+ minor fix for gradle run